<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgreen"
    android:orientation="vertical"
    tools:context=".selection">


    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/welcome_to"

        android:textAlignment="center"
        android:textColor="@color/darkgreen"
        android:textSize="35dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/re_wired"
        android:textAlignment="center"
        android:textColor="@color/darkgreen"
        android:textSize="35dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo_design" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reimagine_recycle_revolutionize_your_e_waste_journey_starts_here"
        android:textColor="@color/darkgreen"
        android:textSize="25dp"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"

        android:layout_width="267dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_bg"
        android:backgroundTint="@color/darkgreen"
        android:layout_height="44dp"
        android:layout_marginTop="100dp"
        android:text="@string/btn_login"
        android:textColor="@color/white"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="267dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_bg"
        android:backgroundTint="@color/darkgreen"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        />

</LinearLayout>